--- a/style.css
+++ b/style.css
@@ -7,10 +7,9 @@
 /* Section Title */
 #contact h2 {
   color: #d6eaff;
-  font-size: 11.5rem;
+  font-size: 4.5rem;
   font-weight: bold;
   text-transform: uppercase;
-  align-self: flex-start;
   margin-top: 1.1rem;
 }
 
